v.0.1.2

- updater: fix for displaying relevant release information
- bugfixes and enhancements


v.0.1.1

- updater: allow updating to the current (unstable) dev release
- compatibility with the homestead updater
- bugfixes and enhancements


v.0.1.0

**if you use a custom theme with snippets, you need to update all snippets**

this is the first beta release.

- renamed global $eigenheim to $core for better compatibility between modules (you need to update all snippets in a custom theme though)
- moved some functions and classes into a _shared folder, for simpler sharing between modules
- system config.php moved from system/site/config.php to system/config.php
- updater fix
- database_entry class as wrapper for file class
- bugfixes & enhancements
- compatibility with the homestead installer


alpha.18

Enhancements:
- added additional HTML tags to allowed_html_elements config option: <u>, <del>, <pre>, <blockquote>, <code>, <video>, <audio>
- when posting: content is now allowed to be empty, if at least a title or an image is provided
- detect more ways to upload an image
- setup now runs silently in the background, if config.php alreeady exists

Fixes:
- better link detection
- show 404 error page, if post does not exist


alpha.17

**if you are on alpha.16, you need to manually update to alpha.17**

- bugfix for autoupdater
- images with spaces or special characters in the filename are now displayed correctly
- automatically rotate images based on exif data
- micropub endpoint: remove superfluous '/' at the end


alpha.16

- now the slug gets used for new post links and foldernames
- when creating a post, and no slug is provided, we automatically create a slug from the post title, or the content, or fall back to a unique id; if the slug already exists, we append a '-1' (or '-2', '-3', ..) to the slug
- update can now be called if $eigenheim object does not exist, so that we better update in case of a system failure