@@ -1,6 +1,7 @@
 v.0.1.2
 
 - updater: fix for displaying relevant release information
+- css & js files: start URL with '//' (instead of 'https://' or 'http://') to avoid mixed content
 - bugfixes and enhancements
 
 
